--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,20 @@
 body{
     font-family: 'PT Sans', sans-serif;
 }
+
+/** containers**/
+
+.container{
+    padding: 1.5rem 1rem;
+}
+
+#fluid{
+    padding: 2rem 1rem;
+    border: 1rem;
+    margin: auto;
+
+}
+
+.center-container{
+    text-align: center;
+}
