--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@
     --primary-color:#a78bfa;
 }
 
+hr{
+    margin: 2rem 0rem;
+}
+
 body{
     font-family: 'PT Sans', sans-serif;
 }
@@ -32,15 +36,25 @@ body{
     padding: 0.5rem 0.5rem;
 }
 
-.primary-link{
+.link-primary{
     background-color: var(--primary-color);
     border-radius: 0.5rem;
     color: white;
 }
 
-.secondary-link{
+.link-secondary{
     color: var(--primary-color);
     border-radius: 0.5rem;
     border: 1px solid var(--primary-color);
 }
 
+/**list**/
+
+.list-non-bullet{
+    list-style: none;
+}
+
+.list-item-inline{
+    display: inline;
+    padding: 0rem 0.5rem;
+}
