update:home page

--- a/styles.css
+++ b/styles.css
@@ -147,3 +147,8 @@ body {
 .footer .ul{
     padding-inline-start: 0px;
 }
+
+.footer .footer-header{
+    font-weight: bold;
+    font-size: large;
+}
